--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "Apache-2.0",
   "keywords": [ "robust", "cluster", "Andras", "race-free", "deterministic" ],
   "repository": "https://github.com/andrasq/node-qcluster",
+  "readme": "see README.md in the repo root",
+
   "dependencies": {
   },
   "devDependencies": {
