fix typo in ci config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ node_js:
   - 12
   - 13
 before_install:
-  - npm install -g qnit
+  - npm install qnit
 after_success:
   - if [ `node -p 'process.version.slice(0, 3)'` != "v8." ]; then exit; fi
   - npm install -g nyc coveralls
